fix hidden input are shown on smaller viewports. Closes #1220

--- a/assets/css/directus.css
+++ b/assets/css/directus.css
@@ -4532,13 +4532,11 @@ body.initial-load #sidebar {
   .content-body {
     margin-top: 70px !important; }
 
+  .two-column-form .fields .table .trow .label, .two-column-form .fields .table .trow .field {
+    display: block; }
   .two-column-form .fields .field {
-    display: block !important;
     padding: 10px 30px 30px 30px; }
-    .two-column-form .fields .field .medium {
-      width: auto; }
   .two-column-form .fields .label {
-    display: block !important;
     width: 100%;
     padding: 30px 30px 10px 30px; }
 
